# erpcloud

./: .editorconfig  AUTHENTICATION.md  AUTHENTICATION_OLD.md  Directory.Build.props  ErpCloud.sln  FIXES_SUMMARY.md  LOGIN-FLOW-ARCHITECTURE.md  MULTI_TENANT_ARCHITECTURE.md  OUTBOX_IMPLEMENTATION.md  OUTBOX_MESSAGING.md  README.md  SPRINT-3.3-PRICING-ENGINE.md  SPRINT-3.5-B4-SEARCH-PERFORMANCE.md  SPRINT-3.6-CONTEXT-MENU.md  SPRINT-3.6-DEBUG-REPORT.md  TENANT_CONTEXT_SORUNLARI.md  check-data.sql  debug_balata_search.sql  decode-token.ps1  docker-compose-keycloak.yml  generate-demo-token.ps1  insert-demo-user.sql  run-api.bat  seed-demo-user.sql
apps/admin-desktop/: .env  .env.example  .env.production  README.md  (+16 more)
apps/admin-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/admin-desktop/src-tauri/icons/: icon.icns
apps/admin-desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE_VEHICLE_FITMENT.md  BUG_FIXES_OEM_SEARCH.md  DESKTOP-DEPLOYMENT-GUIDE.md  E-DOCUMENT-MODULE.md  OEM_FAST_SEARCH_IMPLEMENTATION.md  QA_SEARCH_PERFORMANCE.md  QA_TEZGAH_VEHICLE_FITMENT.md  QA_VEHICLE_FITMENT_FILTERING.md  SPRINT-3.1.5-STEP3-REPORT.md  SPRINT-3.1.6-PAYMENT-MATCHING-REPORT.md  SPRINT-3.2-B-FRONTEND-COMPLETE.md  SPRINT-3.3.1-BRAND-DISCOUNTS.md  SPRINT-3.3.2-BRAND-NORMALIZATION.md  SPRINT-3.4-STEP1-BRAND-UI.md  SPRINT-3.4-STEP2-PRODUCT-BRAND-INTEGRATION.md  SPRINT-3.4-STEP3-SALES-BRAND-VISIBILITY.md  SPRINT_BACKLOG.md  check-search.sql  create-branch-warehouse.sql  create-demo-org.sql  create-walkin-customer.sql  insert-demo-user-bcrypt.sql  seed-demo-user.sql  seed-test-data.sql
(+406 files in other folders)
